solved overlapping drop down list problem

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -129,11 +129,13 @@ h1 {
   left: 0;
   display: flex;
   height: 50px !important;
+  z-index: 6;
 
   ul {
     justify-content: space-between;
     width: 50%;
     align-items: flex-start;
+    z-index: inherit;
   }
 
   li {
